making correction on image folder

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img src="image/siv.jpg" alt="Profile Image">
+        <img src="images/siv.jpg" alt="Profile Image">
         <h1>Siviwe Kibido</h1>
     </header>
     <nav>
