--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="WDD 230 - Web Frontend Development, [Your full name], course assignment portal">
     <meta name="Siviwe Kibido" content="">
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="icon" href="favicon.ico">
        
 </head>
 <body>
