adding normalize css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Siviwe Kibido - WDD 230 - Web Frontend Development</title>
     <meta name="description" content="WDD 230 - Web Frontend Development, [Your full name], course assignment portal">
     <meta name="Siviwe Kibido" content="">
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="icon" href="favicon.ico">
        
