just created the lesson02 folder and insert the appropriate work

--- a/lesson02/index.html
+++ b/lesson02/index.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="icon" href="favicon.ico">
+
+
+    <meta property="og:title" content="WDD 230 - Web Frontend Development" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://github.com/sivkbd/wdd230" />
+    <meta property="og:image" content="https://github.com/sivkbd/wdd230/blob/main/images/siv.jpg" />
        
 </head>
 <body>
