updated index html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Siviwe Kibido - WDD 230 - Web Frontend Development</title>
-    <meta name="description" content="WDD 230 - Web Frontend Development, [Your full name], course assignment portal">
-    <meta name="Siviwe Kibido" content="">
+    <meta name="description" content="  This is Siviwe Kibido's WDD 230 - Web Frontend Development home page for this course. 
+                It serve as a portal page that contains links to his assignments.">
+    <meta name="Author" content="Siviwe Kibido">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="icon" href="favicon.ico">
