--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Siviwe Kibido - WDD 230 - Web Frontend Development</title>
-    <meta name="description" content="  This is Siviwe Kibido's WDD 230 - Web Frontend Development home page for this course. 
-                It serve as a portal page that contains links to his assignments.">
+    <meta name="description" content="  This is Siviwe Kibido's WDD 230 - Web Frontend Development home page for this course. It serve as a portal page that contains links to his assignments.">
     <meta name="Author" content="Siviwe Kibido">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="icon" href="favicon.ico">
 
 
-    <meta property="og:title" content="WDD 230 - Web Frontend Development" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://github.com/sivkbd/wdd230" />
-    <meta property="og:image" content="https://github.com/sivkbd/wdd230/blob/main/images/siv.jpg" />
+    <meta property="og:title" content="WDD 230 - Web Frontend Development">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://github.com/sivkbd/wdd230">
+    <meta property="og:image" content="https://github.com/sivkbd/wdd230/blob/main/images/siv.jpg">
        
 </head>
 <body>
