homepage corrections and update

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="Author" content="Siviwe Kibido">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/larger.css">
     <link rel="icon" href="favicon.ico">
 
 
@@ -57,10 +58,8 @@
             <script src="scripts/getdates.js"></script>
             <p><a>Siviwe Kibido</a></p>
             <p><a>South Africa</a></p>
-            <p id="lastModified"></p>
-            <script> 
-                document.getElementById("lastModified").innerHTML = new Date(document.lastModified);
-            </script> 
+            <p>Last modified: <span id="lastModified"></span>
+        
             
         </footer>
 </body>
