updated the homepage

--- a/index.html
+++ b/index.html
@@ -59,15 +59,11 @@
     </main>
     <footer>
 
-        <p>&copy;
-            <script src="scripts/getdates.js"></script>
+        <p>&copy; <span id="currentYear"></span>
         <p>Siviwe Kibido</p>
-        <p id="lastModified"></p>
-        <script>
-            document.getElementById("lastModified").innerHTML = "Last modified: " + document.lastModified;
-        </script>
-
-
+        <p id=lastmodified;></p>
+        <script src="scripts/getdates.js"></script>
+        </p>
     </footer>
 </body>
 
