--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <p>&copy; <span id="currentYear"></span>
         <p>Siviwe Kibido</p>
-        <p id=lastmodified;></p>
+        <p>Last modified</p>
         <script src="scripts/getdates.js"></script>
         </p>
     </footer>
